# CLI-CHAT

./: README.md
lanchat-pkg/: pyproject.toml
lanchat-pkg/lanchat/: client.py  server.py
lanchat-pkg/lanchat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
